Reworked the issue list into a vertical listbox layout

--- a/GitHubExtension/View/IssueList.xaml
+++ b/GitHubExtension/View/IssueList.xaml
@@ -11,18 +11,18 @@
              xmlns:viewModel="clr-namespace:Alteridem.GitHub.Extension.ViewModel"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance viewModel:IssueListViewModel}"
-             d:DesignHeight="500" 
-             d:DesignWidth="800">
-    <UserControl.Resources>
-        <converters:StringToColorConverter x:Key="ColorConverter" />
-        <DataTemplate x:Key="RepositoryTemplate">
-            <Grid HorizontalAlignment="Stretch">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding Path=Repository.FullName}" />
-                <Border 
+             d:DesignHeight="800" 
+             d:DesignWidth="400">
+  <UserControl.Resources>
+    <converters:StringToColorConverter x:Key="ColorConverter" />
+    <DataTemplate x:Key="RepositoryTemplate">
+      <Grid HorizontalAlignment="Stretch">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="1*"/>
+          <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding Path=Repository.FullName}" />
+        <Border 
                     Grid.Column="1" 
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center" 
@@ -30,60 +30,45 @@
                     BorderBrush="{DynamicResource {x:Static view:Theme.ControlBorderKey}}"
                     CornerRadius="2" 
                     BorderThickness="1" >
-                    <TextBlock Text="{Binding Path=Repository.OpenIssuesCount}" Margin="2" FontSize="10" />
-                </Border>
-            </Grid>
-        </DataTemplate>
-        <DataTemplate x:Key="LabelTemplate">
-            <StackPanel Orientation="Horizontal">
-                <Border Background="{Binding Path=Color, Converter={StaticResource ColorConverter}}" CornerRadius="2" Width="6" Height="16" Margin="3,0" />
-                <TextBlock Margin="3,0" Text="{Binding Path=Name}"/>
-            </StackPanel>
-        </DataTemplate>
-        <DataTemplate x:Key="MilestoneTemplate">
-            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding Path=Title}" />
-        </DataTemplate>
-        <ObjectDataProvider MethodName="GetValues" ObjectType="{x:Type sys:Enum}" x:Key="IssueFilterDataProvider">
-            <ObjectDataProvider.MethodParameters>
-                <x:Type TypeName="octokit:IssueFilter" />
-            </ObjectDataProvider.MethodParameters>
-        </ObjectDataProvider>
-    </UserControl.Resources>
-    <Grid>
-        <Grid.Resources>
-            <ResourceDictionary Source="Theme.xaml" />
-        </Grid.Resources>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition Width="180" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="38"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
-            <ComboBox x:Name="Repositories"  Width="200" Height="26" Margin="6,6,3,6" 
+          <TextBlock Text="{Binding Path=Repository.OpenIssuesCount}" Margin="2" FontSize="10" />
+        </Border>
+      </Grid>
+    </DataTemplate>
+    <DataTemplate x:Key="LabelTemplate">
+      <StackPanel Orientation="Horizontal">
+        <Border Background="{Binding Path=Color, Converter={StaticResource ColorConverter}}" CornerRadius="2" Width="6" Height="16" Margin="3,0" />
+        <TextBlock Margin="3,0" Text="{Binding Path=Name}"/>
+      </StackPanel>
+    </DataTemplate>
+    <DataTemplate x:Key="MilestoneTemplate">
+      <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding Path=Title}" />
+    </DataTemplate>
+    <ObjectDataProvider MethodName="GetValues" ObjectType="{x:Type sys:Enum}" x:Key="IssueFilterDataProvider">
+      <ObjectDataProvider.MethodParameters>
+        <x:Type TypeName="octokit:IssueFilter" />
+      </ObjectDataProvider.MethodParameters>
+    </ObjectDataProvider>
+  </UserControl.Resources>
+  <Grid>
+    <Grid.Resources>
+      <ResourceDictionary Source="Theme.xaml" />
+    </Grid.Resources>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition />
+      <ColumnDefinition Width="Auto" />
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="38"/>
+      <RowDefinition Height="38"/>
+      <RowDefinition/>
+    </Grid.RowDefinitions>
+    <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
+      <ComboBox x:Name="Repositories"  Width="200" Height="26" Margin="6,6,3,6" 
                       HorizontalContentAlignment="Stretch"
                       ItemsSource="{Binding Path=Repositories}" 
                       SelectedItem="{Binding Path=Repository}" 
                       ItemTemplate="{StaticResource RepositoryTemplate}"/>
-            <!--<ComboBox x:Name="Filter" Margin="3,6"
-                      Width="120" Height="26"
-                      ItemsSource="{Binding Source={StaticResource IssueFilterDataProvider}}"
-                      SelectedItem="{Binding Path=Filter}" >
-            </ComboBox>-->
-            <ComboBox x:Name="Label" Margin="3,6"
-                      Width="120" Height="26"
-                      ItemsSource="{Binding Path=Labels}"
-                      SelectedItem="{Binding Path=Label}"
-                      ItemTemplate="{StaticResource LabelTemplate}" />
-            <ComboBox x:Name="Milestone" Margin="3,6"
-                      Width="120" Height="26"
-                      HorizontalContentAlignment="Stretch"
-                      ItemsSource="{Binding Path=Milestones}"
-                      SelectedItem="{Binding Path=Milestone}"
-                      ItemTemplate="{StaticResource MilestoneTemplate}" />
-            <Button 
+      <Button 
                 Command="{Binding Path=RefreshCommand}"
                 Content="&#xf021;"
                 FontFamily="/Alteridem.GitHub.Extension;Component/Fonts/#FontAwesome"
@@ -93,7 +78,7 @@
                 ToolTip="Refresh List" 
                 HorizontalAlignment="Right"
                 IsEnabled="True" />
-            <Button 
+      <Button 
                 Command="{Binding Path=AddIssueCommand}"
                 Content="&#xf067;"
                 FontFamily="/Alteridem.GitHub.Extension;Component/Fonts/#FontAwesome"
@@ -103,60 +88,102 @@
                 ToolTip="Add Issue" 
                 HorizontalAlignment="Right"
                 IsEnabled="True" />
-        </StackPanel>
-        <view:UserView Grid.Row="0" Grid.Column="1" Width="Auto" HorizontalAlignment="Right"/>
-        <DataGrid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" 
+    </StackPanel>
+
+    <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+      <!--<ComboBox x:Name="Filter" Margin="3,6"
+                      Width="120" Height="26"
+                      ItemsSource="{Binding Source={StaticResource IssueFilterDataProvider}}"
+                      SelectedItem="{Binding Path=Filter}" >
+      </ComboBox>-->
+      <ComboBox x:Name="Label" Margin="3,6"
+                      Width="120" Height="26"
+                      ItemsSource="{Binding Path=Labels}"
+                      SelectedItem="{Binding Path=Label}"
+                      ItemTemplate="{StaticResource LabelTemplate}" />
+      <ComboBox x:Name="Milestone" Margin="3,6"
+                      Width="120" Height="26"
+                      HorizontalContentAlignment="Stretch"
+                      ItemsSource="{Binding Path=Milestones}"
+                      SelectedItem="{Binding Path=Milestone}"
+                      ItemTemplate="{StaticResource MilestoneTemplate}" />
+    </StackPanel>
+
+    <view:UserView Grid.Row="0" Grid.Column="1" Width="Auto" HorizontalAlignment="Right"/>
+
+    <ListBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" 
                   Name="Issues"
                   Margin="6,0,6,6"
-                  AutoGenerateColumns="False" 
                   ItemsSource="{Binding Path=Issues}"
                   SelectedItem="{Binding Path=Issue}"
-                  FontSize="12"
-                  IsReadOnly="True"
-                  RowHeaderWidth="0" 
+                  FontSize="11" 
+                  FontFamily="Verdana"
                   MouseDoubleClick="OnRowDoubleClick"
+                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                   Background="{DynamicResource {x:Static view:Theme.BackgroundKey}}"
                   Foreground="{DynamicResource {x:Static view:Theme.ForegroundKey}}"
-                  RowBackground="{DynamicResource {x:Static view:Theme.BackgroundKey}}"
-                  AlternatingRowBackground="{DynamicResource {x:Static view:Theme.BackgroundAccentKey}}" 
-                  HorizontalGridLinesBrush="{DynamicResource {x:Static view:Theme.ControlBorderKey}}"
-                  VerticalGridLinesBrush="{DynamicResource {x:Static view:Theme.ControlBorderKey}}"
                   BorderBrush="{DynamicResource {x:Static view:Theme.ControlBorderKey}}" >
-            <DataGrid.ColumnHeaderStyle>
-                <Style TargetType="DataGridColumnHeader">
-                    <Setter Property="Background" Value="{DynamicResource {x:Static view:Theme.BackgroundKey}}" />
-                    <Setter Property="Margin" Value="2" />
-                    <Setter Property="FontWeight" Value="Bold" />
-                    <Setter Property="FontSize" Value="12" />
-                </Style>
-            </DataGrid.ColumnHeaderStyle>
-            <DataGrid.RowHeaderStyle>
-                <Style TargetType="DataGridRowHeader">
-                    <Setter Property="Background" Value="{DynamicResource {x:Static view:Theme.BackgroundKey}}" />
-                    <Setter Property="SeparatorBrush" Value="{DynamicResource {x:Static view:Theme.ControlBorderKey}}" />
-                    <Setter Property="SeparatorVisibility" Value="Visible" />
-                    <Setter Property="FontWeight" Value="Bold" />
-                    <Setter Property="FontSize" Value="12" />
-                    <Setter Property="Width" Value="4" />
-                </Style>
-            </DataGrid.RowHeaderStyle>
-            <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding Path=Number}" Header="" CanUserResize="False">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="Margin" Value="5,0,5,0" />
-                            <Setter Property="HorizontalAlignment" Value="Right"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding Path=Title}" Header="Title" Width="400" />
-                <DataGridTextColumn Binding="{Binding Path=State}" Header="State" CanUserResize="False" />
-                <DataGridTextColumn Binding="{Binding Path=Milestone.Title}" Header="Milestone" CanUserResize="False" />
-                <DataGridTextColumn Binding="{Binding Path=User.Login}" Header="Reported By" Width="120"/>
-                <DataGridTextColumn Binding="{Binding Path=Assignee.Login}" Header="Assigned To" Width="120"/>
-                <DataGridTextColumn Binding="{Binding Path=CreatedAt,StringFormat=d}" Header="Created" CanUserResize="False" />
-                <DataGridTextColumn Binding="{Binding Path=UpdatedAt,StringFormat=d}" Header="Updated" CanUserResize="False" />
-            </DataGrid.Columns>
-        </DataGrid>
-    </Grid>
+      <ListBox.ItemContainerStyle>
+        <Style TargetType="ListBoxItem">
+          <Setter Property="HorizontalContentAlignment"
+                   Value="Stretch" />
+        </Style>
+      </ListBox.ItemContainerStyle>
+      <ListBox.ItemTemplate>
+        <DataTemplate>
+          <Grid Margin="0,3,0,3">
+            <Grid.RowDefinitions>
+              <RowDefinition Height="Auto" />
+              <RowDefinition Height="Auto" />
+              <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="Auto" />
+              <ColumnDefinition Width="*" />
+              <ColumnDefinition Width="*" />
+              <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Orientation="Vertical" 
+                        Grid.Column="0" 
+                        Grid.Row="0" 
+                        Grid.RowSpan="3" 
+                        Margin="0,0,6,0">
+              <TextBlock Text="{Binding Path=Number}" 
+                         FontWeight="Bold" />
+            </StackPanel>
+            <TextBlock Text="{Binding Path=State}" 
+                       Grid.Column="1" 
+                       Grid.Row="0" 
+                       Grid.ColumnSpan="3" 
+                       FontSize="9" 
+                       HorizontalAlignment="Right"
+                       Margin="0,2,0,2"
+                       Foreground="{DynamicResource {x:Static view:Theme.GrayTextKey}}" />
+            <TextBlock Text="{Binding Path=Title}" 
+                       Grid.Column="1" 
+                       Grid.Row="1" 
+                       Grid.ColumnSpan="3" 
+                       FontSize="12" 
+                       TextTrimming="CharacterEllipsis" 
+                       HorizontalAlignment="Stretch" />
+
+            <TextBlock Text="{Binding Path=User.Login}" 
+                       Grid.Column="1" 
+                       Grid.Row="2"
+                       Foreground="{DynamicResource {x:Static view:Theme.GrayTextKey}}" />
+            <TextBlock Text="{Binding Path=UpdatedAt.Date,StringFormat=d}" 
+                       Grid.Column="2" 
+                       Grid.Row="2" 
+                       FontStyle="Italic"
+                       Foreground="{DynamicResource {x:Static view:Theme.GrayTextKey}}" />
+            <TextBlock Text="{Binding Path=Comments}" 
+                       Grid.Column="3" 
+                       Grid.Row="2" 
+                       HorizontalAlignment="Right"
+                       Foreground="{DynamicResource {x:Static view:Theme.GrayTextKey}}" />
+          </Grid>
+        </DataTemplate>
+      </ListBox.ItemTemplate>
+    </ListBox>
+  </Grid>
 </UserControl>
