Fixed the gravatar

--- a/GitHubExtension/View/Avatar.xaml
+++ b/GitHubExtension/View/Avatar.xaml
@@ -1,15 +1,15 @@
-﻿<UserControl x:Class="Alteridem.GitHub.Extension.View.Gravatar"
+﻿<UserControl x:Class="Alteridem.GitHub.Extension.View.Avatar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModel="clr-namespace:Alteridem.GitHub.Extension.ViewModel"
              mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance viewModel:GravatarViewModel}"
+             d:DataContext="{d:DesignInstance viewModel:AvatarViewModel}"
              d:DesignHeight="32" d:DesignWidth="32">
-    <Rectangle x:Name="Avatar" RadiusX="4" RadiusY="4" Width="{Binding Path=Size}" Height="{Binding Path=Size}" >
+    <Rectangle x:Name="Image" RadiusX="4" RadiusY="4" Width="{Binding Path=Size}" Height="{Binding Path=Size}" >
         <Rectangle.Fill>
-            <ImageBrush ImageSource="{Binding Path=GravatarUrl}"></ImageBrush>
+            <ImageBrush ImageSource="{Binding Path=AvatarUrl}"></ImageBrush>
         </Rectangle.Fill>
     </Rectangle>
 </UserControl>
